--- a/LivingWater/Assets/js/directives/template1/house/adminDashboard/adminDashboard.html
+++ b/LivingWater/Assets/js/directives/template1/house/adminDashboard/adminDashboard.html
@@ -7,6 +7,9 @@
         <div ng-if="isEnableNewsModify">
             <h1>News Modification</h1>
         </div>
+        <div ng-if="isEnableSettingsModify">
+            <h1>Settings</h1>
+        </div>
     </center>
 </div>
 
