--- a/LivingWater/Assets/js/directives/template1/ui/adminDashboard/newsSection/newsSection.html
+++ b/LivingWater/Assets/js/directives/template1/ui/adminDashboard/newsSection/newsSection.html
@@ -19,7 +19,30 @@
             </tr>
             <tr>
                 <td>
+
                     <h1>Display Video Modify Here</h1>
+                    <table>
+                        <tr>
+                            <td>
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <input type="text" placeholder="Youtube Code" value="" />
+                                        </td>
+                                        <td>
+                                            <input type="button" value="POST" />
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+
                 </td>
             </tr>
             <tr>
