--- a/LivingWater/Assets/js/directives/template1/ui/registration/registrationComponent.html
+++ b/LivingWater/Assets/js/directives/template1/ui/registration/registrationComponent.html
@@ -1,6 +1,6 @@
 ﻿<div>
     <div class="row margin-custom">
-        <div class="col-xs-4 bg4">
+        <div class="col-xs-4">
             <nav class="navbar navbar-default divTransparent">
                 <div class="form-group ">
                     <input type="text" class="form-control" placeholder="Username" ng-model="username" aria-describedby="basic-addon1" required/>
