--- a/LivingWater/Assets/js/directives/template2/ui/navigationBar/navigationBar.html
+++ b/LivingWater/Assets/js/directives/template2/ui/navigationBar/navigationBar.html
@@ -10,7 +10,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Living Water Inc</a>
+                    <a class="navbar-brand">Living Water Inc</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -33,10 +33,10 @@
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Messages <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a ng-click="goto('/Inbox')" >Inbox</a></li>
-                                <li><a href="#">Drafts</a></li>
-                                <li><a href="#">Sent Items</a></li>
+                                <li><a>Drafts</a></li>
+                                <li><a>Sent Items</a></li>
                                 <li class="divider"></li>
-                                <li><a href="#">Trash</a></li>
+                                <li><a>Trash</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a ng-click="goto('/AdminDashboard', 'News')">Manage News</a></li>
                                 <li><a ng-click="goto('/AdminDashboard', 'Products')">Manage Products</a></li>
-                                <li><a href="#">Settings</a></li>
+                                <li><a ng-click="goto('/AdminDashboard', 'Settings')">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a ng-click="goto('/Login')">Logout</a></li>
                             </ul>
