--- a/LivingWater/Assets/js/directives/template1/house/adminDashboard/adminDashboard.html
+++ b/LivingWater/Assets/js/directives/template1/house/adminDashboard/adminDashboard.html
@@ -3,13 +3,16 @@
         <h1>Admin Dashboard</h1>
         <div ng-if="isEnableProductModify">
             <h1>Product Modification</h1>
+            <product-modify></product-modify>
         </div>
         <div ng-if="isEnableNewsModify">
             <h1>News Modification</h1>
+
         </div>
         <div ng-if="isEnableSettingsModify">
             <h1>Settings</h1>
         </div>
+
     </center>
 </div>
 
