--- a/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
@@ -2,60 +2,62 @@
 
     <link rel="stylesheet" type="text/css" href="/Assets/js/directives/template1/ui/aboutUs/css/aboutUs.css" />
 
-    <h1 style="text-align:initial">Livingwater System Incorporated</h1>
+    <div class="block">
+            <h1 style="text-align:initial">Livingwater System Incorporated</h1>
 
-    <img src="/Assets/images/etc/img1.jpg" class="auImg" />
-    
-    <table style="width:700px;word-break:break-word;">
-        <tr>
-            <td>
-                <h4>Company Background</h4>
-            </td> 
-        </tr>
+            <img src="/Assets/images/etc/img1.jpg" class="auImg" />
 
-        <tr>
-            <td>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat. 
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium. 
-                Donec condimentum vehicula urna, quis condimentum quam venenatis a. Aliquam erat volutpat. </p>
-            </td>
-        </tr>
+            <table style="width:700px;word-break:break-word;">
+                <tr>
+                    <td>
+                        <h4>Company Background</h4>
+                    </td>
+                </tr>
 
-        <tr>
-            <td> 
-                <h4>Vision</h4>
-            </td>
-         </tr>
+                <tr>
+                    <td>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
+                            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
+                            Donec condimentum vehicula urna, quis condimentum quam venenatis a. Aliquam erat volutpat.
+                        </p>
+                    </td>
+                </tr>
 
-        <tr>
-            <td>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
-                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
-                    Donec condimentum vehicula urna, quis condimentum quam venenatis a.
-                </p>
-            </td>
-        </tr> 
+                <tr>
+                    <td>
+                        <h4>Vision</h4>
+                    </td>
+                </tr>
 
-        <tr>  
-            <td>
-                <h4>Mission</h4>
-            </td>
-        </tr>
+                <tr>
+                    <td>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
+                            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
+                            Donec condimentum vehicula urna, quis condimentum quam venenatis a.
+                        </p>
+                    </td>
+                </tr>
 
-        <tr>
-            <td>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
-                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
-                    Donec condimentum vehicula urna, quis condimentum quam venenatis a.
-                </p>
-            </td>
-        </tr> 
+                <tr>
+                    <td>
+                        <h4>Mission</h4>
+                    </td>
+                </tr>
 
-    </table>
+                <tr>
+                    <td>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
+                            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
+                            Donec condimentum vehicula urna, quis condimentum quam venenatis a.
+                        </p>
+                    </td>
+                </tr>
 
-
+            </table>
+    </div>
     <!--<table>
         <tr>
             <td>
