--- a/LivingWater/Assets/js/directives/template1/house/contactUs/ContactUs.html
+++ b/LivingWater/Assets/js/directives/template1/house/contactUs/ContactUs.html
@@ -1,7 +1,7 @@
-﻿<div class="" ng-controller="ContactUsCtrl">
+﻿<div ng-controller="ContactUsCtrl">
         <center>
             <div ng-repeat="obj in data">
-                <contact-us-body data="obj"></contact-us-body>
+                    <contact-us-body data="obj"></contact-us-body>
             </div>
         </center>
 </div>
