--- a/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
@@ -1,9 +1,7 @@
 ﻿<div>
-
     <link rel="stylesheet" type="text/css" href="/Assets/js/directives/template1/ui/aboutUs/css/aboutUs.css" />
-
     <div class="block">
-            <h1 style="text-align:initial">Livingwater System Incorporated</h1>
+            <h1 style="text-align:initial; color:white; font-family:'Times New Roman', Times, serif">Livingwater System Incorporated</h1>
 
             <img src="/Assets/images/etc/img1.jpg" class="auImg" />
 
@@ -16,7 +14,7 @@
 
                 <tr>
                     <td>
-                        <p>
+                        <p style="color:white">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
                             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
                             Donec condimentum vehicula urna, quis condimentum quam venenatis a. Aliquam erat volutpat.
@@ -32,7 +30,7 @@
 
                 <tr>
                     <td>
-                        <p>
+                        <p style="color:white">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
                             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
                             Donec condimentum vehicula urna, quis condimentum quam venenatis a.
@@ -48,7 +46,7 @@
 
                 <tr>
                     <td>
-                        <p>
+                        <p style="color:white">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pharetra sem eget leo mattis dignissim. Nam et neque erat.
                             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean tincidunt nec lectus in pretium.
                             Donec condimentum vehicula urna, quis condimentum quam venenatis a.
