--- a/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
+++ b/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
@@ -1,49 +1,50 @@
 ﻿<div>
     <link rel="stylesheet" type="text/css" href="contactUs.css" />
-        <table style="margin-bottom:50px;">
-            <tr>
-                <td>
-                    <h3 class="blackFont contactTexts fontFranklinGothicMedium " ng-bind="data.head"></h3>
-                </td>
-            </tr>
-            <tr>
-                <td style="width:500px; height:100px">
-                    <table>
-                        <tr>
-                            <td>
-                                <table>
-                                    <tr>
-                                        <td style="padding-right:20px">
-                                            <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.email"></h3>
-                                        </td>
-                                        <td>
-                                            <img style="width:100px; height:100px" src="/Assets/images/icons/ic1.png" />
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="padding-right:20px">
-                                            <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.cell"></h3>
-                                        </td>
-                                        <td>
-                                            <img class="contactTexts fontFranklinGothicMedium" style="width:100px; height:100px" src="/Assets/images/icons/ic2.png" />
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="padding-right:20px">
-                                            <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.telnumber"></h3>
-                                        </td>
-                                        <td>
-                                            <img style="width:100px; height:100px" src="/Assets/images/icons/ic3.png" />
-                                        </td>
-                                    </tr>
-                                </table>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-
+    <div style="background-color:rgba(0,0,0,0.2); padding-left:1px; padding-right:1px; width:1150px; height:400px; margin-bottom:10px;">
+            <table style="margin-bottom:50px;">
+                <tr>
+                    <td>
+                        <h3 class="blackFont contactTexts fontFranklinGothicMedium " ng-bind="data.head"></h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width:500px; height:100px">
+                        <table>
+                            <tr>
+                                <td>
+                                    <table>
+                                        <tr>
+                                            <td style="padding-right:20px">
+                                                <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.email"></h3>
+                                            </td>
+                                            <td>
+                                                <img style="width:100px; height:100px" src="/Assets/images/icons/ic1.png" />
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="padding-right:20px">
+                                                <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.cell"></h3>
+                                            </td>
+                                            <td>
+                                                <img class="contactTexts fontFranklinGothicMedium" style="width:100px; height:100px" src="/Assets/images/icons/ic2.png" />
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="padding-right:20px">
+                                                <h3 class="contactTexts fontFranklinGothicMedium blackFont" ng-bind="data.telnumber"></h3>
+                                            </td>
+                                            <td>
+                                                <img style="width:100px; height:100px" src="/Assets/images/icons/ic3.png" />
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </div>
         <concern-component ></concern-component>
 
 </div>
