--- a/LivingWater/Assets/js/directives/template1/house/viewNews/viewNews.html
+++ b/LivingWater/Assets/js/directives/template1/house/viewNews/viewNews.html
@@ -4,20 +4,20 @@
             <table>
                 <tr>
                     <td>
-                        <h1 ng-bind="title">Title News Here</h1>
+                        <h1 style="color:white;" ng-bind="title">Title News Here</h1>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p>Date Published <span ng-bind="datePublished" ></span></p>
+                        <p style="color:white;">Date Published <span ng-bind="datePublished" ></span></p>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <table style="word-break:break-word; margin-top: 100px; margin-bottom:50px; width: 1000px; ">
+                        <table style="background-color:rgba(255,255,255,0.3); padding-left:5px; word-break:break-word; margin-top: 100px; margin-bottom:50px; width: 1000px; ">
                             <tr>
                                 <td>
-                                    <p ng-bind="content"></p>
+                                    <p style="color:white;" ng-bind="content"></p>
                                 </td>
                             </tr>
                         </table>
