--- a/LivingWater/Assets/js/directives/template1/ui/registration/registrationComponent.html
+++ b/LivingWater/Assets/js/directives/template1/ui/registration/registrationComponent.html
@@ -1,7 +1,7 @@
 ﻿<div>
     <div class="row margin-custom">
         <div class="col-xs-4">
-            <nav class="navbar navbar-default divTransparent">
+            <nav class="navbar" style="background-color:rgba(255,255,255,0.3); padding:30px; border-radius:50px;" >
                 <div class="form-group ">
                     <input type="text" class="form-control" placeholder="Username" ng-model="username" aria-describedby="basic-addon1" required/>
                 </div>
