--- a/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsBody/newsBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsBody/newsBody.html
@@ -8,16 +8,16 @@
                         <td>
                             <a ng-click="ShowNewsInformation()">
                                 <div>
-                                    <div style="float:left; position:absolute; margin-top:280px; z-index:1; background-color:white; opacity:0.7; width:1000px;">
+                                    <div style="float:left; position:absolute; margin-top:280px; z-index:1; background-color:rgba(255,255,255,0.4); width:1000px;">
                                         <table style="margin-left:10px;">
                                             <tr>
                                                 <td style="text-emphasis-style:circle;">
-                                                    <h1 ng-bind="title"></h1>
+                                                    <h1 style="color:black;" ng-bind="title"></h1>
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td  style="text-emphasis-style:circle;">
-                                                    <p ng-bind="content | limitTo:30"></p>
+                                                    <p style="color:black;" ng-bind="content | limitTo:30"></p>
                                                 </td>
                                             </tr>
                                         </table>
