--- a/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
@@ -1,17 +1,17 @@
 ﻿<div>
-    <input type="button" value="DELETE" ng-if="enableDeleteMode"/>
+    <input type="button" value="DELETE" ng-if="(mode==1)?true:false"/>
     <table>
         <tr ng-repeat="row in items">
             <td ng-repeat="col in row.items" style="padding-right:50px; padding-top:50px">
                 <table>
-                    <tr ng-if="enableDeleteMode">
+                    <tr ng-if="(mode==1)?true:false">
                         <td>
                             <center>
                                 <input type="checkbox" />
                             </center>
                         </td>
                     </tr>
-                    <tr ng-if="enableEditMode">
+                    <tr ng-if="(mode==2)?true:false">
                         <td>
                             <center>
                                 <input type="button" value="EDIT" />
