--- a/LivingWater/Assets/js/directives/template2/ui/products/productModify/productModify.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productModify/productModify.html
@@ -56,11 +56,11 @@
                 </div>
                 <div ng-show="isDeleteEnable">
                     <h1>DELETE</h1>
-                    <product-view-filter ng-if="isDeleteEnable"></product-view-filter>
+                    <product-view-filter ng-if="isDeleteEnable" mode="1"></product-view-filter>
                 </div>
                 <div ng-show="isEditEnable">
                     <h1>Edit</h1>
-                    <product-view-filter ng-if="isEditEnable"></product-view-filter>
+                    <product-view-filter ng-if="isEditEnable" mode="2"></product-view-filter>
                 </div>
 
             </td>
