--- a/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
+++ b/LivingWater/Assets/js/directives/template1/ui/aboutUs/aboutUs.html
@@ -1,6 +1,6 @@
 ﻿<div>
     <link rel="stylesheet" type="text/css" href="/Assets/js/directives/template1/ui/aboutUs/css/aboutUs.css" />
-    <div class="block">
+    <div class="block borderRadius50px">
             <h1 style="text-align:initial; color:white; font-family:'Times New Roman', Times, serif">Livingwater System Incorporated</h1>
 
             <img src="/Assets/images/etc/img1.jpg" class="auImg" />
@@ -8,7 +8,7 @@
             <table style="width:700px;word-break:break-word;">
                 <tr>
                     <td>
-                        <h4>Company Background</h4>
+                        <h4 style="color:ghostwhite">Company Background</h4>
                     </td>
                 </tr>
 
@@ -24,7 +24,7 @@
 
                 <tr>
                     <td>
-                        <h4>Vision</h4>
+                        <h4 style="color:ghostwhite">Vision</h4>
                     </td>
                 </tr>
 
@@ -40,7 +40,7 @@
 
                 <tr>
                     <td>
-                        <h4>Mission</h4>
+                        <h4 style="color:ghostwhite">Mission</h4>
                     </td>
                 </tr>
 
