--- a/LivingWater/Assets/js/directives/template1/ui/concernComponent/concernComponent.html
+++ b/LivingWater/Assets/js/directives/template1/ui/concernComponent/concernComponent.html
@@ -1,7 +1,7 @@
 ﻿<div>
     <link rel="stylesheet" type="text/css" href="concernComponent.css" />
     <div class="container">
-        <form class="well form-horizontal backgroundOpacity noBorders padding5px" action=" " method="post">
+        <form class="well form-horizontal backgroundOpacity noBorders padding5px borderRadiusRight50px" method="post">
             <fieldset>
                 <!-- Form Name -->
                 <legend>Contact Us Today!</legend>
