--- a/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
+++ b/LivingWater/Assets/js/directives/template1/ui/contactComponents/contactUsBody/contactUsBody.html
@@ -1,6 +1,6 @@
 ﻿<div>
     <link rel="stylesheet" type="text/css" href="contactUs.css" />
-    <div style="background-color:rgba(0,0,0,0.2); padding-left:1px; padding-right:1px; width:1150px; height:400px; margin-bottom:10px;">
+    <div class="borderRadiusRight50px" style="background-color:rgba(0,0,0,0.2); padding-left:1px; padding-right:1px; width:1150px; height:400px; margin-bottom:10px;">
             <table style="margin-bottom:50px;">
                 <tr>
                     <td>
