--- a/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
@@ -37,6 +37,11 @@
                             </center>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <input type="button" value="LEARN MORE" ng-click="LearnMore_OnClicked(col)"/>
+                        </td>
+                    </tr>
                     <tr ng-if="enablePurchase">
                         <td>
                             <center>
