--- a/LivingWater/Assets/js/directives/template2/ui/products/productModify/productModify.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productModify/productModify.html
@@ -1,8 +1,8 @@
 ﻿<div>
-    <table>
+    <table style="width:1000px;">
         <tr>
             <td>
-                <table style="width:1000px; height:100px;">
+                <table style="height:100px;">
                     <tr>
                         <td>
                             <input type="button" value="ADD" ng-click="ChangeModes(1)" ng-disabled="isAddingEnable"/>
@@ -62,7 +62,6 @@
                     <h1>Edit</h1>
                     <product-view-filter ng-if="isEditEnable" mode="2"></product-view-filter>
                 </div>
-
             </td>
         </tr>
     </table>
