--- a/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
@@ -39,7 +39,9 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="button" value="LEARN MORE" ng-click="LearnMore_OnClicked(col)"/>
+                            <center>
+                                <input type="button" value="LEARN MORE" ng-click="LearnMore_OnClicked(col)" />
+                            </center>
                         </td>
                     </tr>
                     <tr ng-if="enablePurchase">
