--- a/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productBody/productBody.html
@@ -14,7 +14,7 @@
                     <tr ng-if="(mode==2)?true:false">
                         <td>
                             <center>
-                                <input type="button" value="EDIT" />
+                                <input type="button" value="EDIT" ng-click="Edit_OnClicked(col)"/>
                             </center>
                         </td>
                     </tr>
